--- a/DemoIonicApp/src/pages/detail/detail.html
+++ b/DemoIonicApp/src/pages/detail/detail.html
@@ -27,7 +27,7 @@
     </div>
   </form>
   <div class="image-container">
-    <img [src]="data && data.image?data.image:'../../assets/imgs/logo.png'" alt="">
+    <img [src]="data && data.image?data.image:'assets/imgs/logo.png'" alt="">
   </div>
 </ion-content>
 <ion-footer no-border padding text-right>
